# tcp_serial_proxy

./: Cargo.toml  README.md  rust-toolchain
resources/: example_config.json
src/: lib.rs  main.rs  proxy_server.rs  server_config.rs
