[package]
name = "tcp_serial_proxy"
version = "0.1.0"
edition = "2021"
authors = ["Michał Smolarek <msmolarekg@gmail.com>"]

[dependencies]
clap = { version = "4.1.1", features = ["derive", "wrap_help"] }
serde = "1.0.152"
serde_derive = "1.0.152"
anyhow = "1.0.68"
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["signal", "rt", "net", "sync", "macros", "io-util", "io-std"] }
backoff = { version = "0.4.0", features = ["tokio"] }
tokio-serial = "5.4.4"
log = "0.4.17"
env_logger = "0.10.0"
